oncokb/oncokb.dev/oncokb_dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oncokb-dev
  namespace: oncokb-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      run: oncokb-dev
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: oncokb-dev
    spec:
      containers:
        - env:
          image: nginxdemos/hello
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            timeoutSeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            timeoutSeconds: 10
            periodSeconds: 3000
          name: oncokb-dev
          ports:
            - containerPort: 80
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: oncokb-dev
  namespace: oncokb-dev
spec:
  ports:
  - port: 80
    name: http
    targetPort: 80
  selector:
    run: oncokb-dev
  type: ClusterIP
